--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -135,9 +135,8 @@
               <div class="hourTd"></div>
               <div class="hourTd"></div>
               <div class="hourTd"></div>
-              <div class="hourTd"></div>
-              <div class="driverTd {{v.id}} d{{v.driver.id}}" title="{{v.vehicle_num0}} {{v.vehicle_num}}">
-                {{v.vehicle_num}}({{v.driver_name}})</div>
+              <div class="driverTd {{v.id}} d{{v.driver.id}}" title="{{v.vehicle_num0}} {{v.vehicle_num}} ({{v.model_year}})">
+                {{v.vehicle_num}}{% if v.driver_name %}({{v.driver_name}}){% endif %}</div>
             </div>
             {% endfor %}
           </div>
@@ -374,7 +373,13 @@
               </td>
               <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.number1}}{% if order.number2 %} - {{order.number2}}{% endif %}</td>
               <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.route}}</td>
-              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">{{order.departure_time}} ~ {{order.arrival_time}}</td>
+              <td onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'">
+                {% if departure_time_list|index:forloop.counter0 and arrival_time_list|index:forloop.counter0 %}
+                {{departure_time_list|index:forloop.counter0}} ~ {{arrival_time_list|index:forloop.counter0}}
+                {% else %}
+                {{order.departure_time}} ~ {{order.arrival_time}}
+                {% endif %}
+              </td>
               <td {% if detail.id != order.id %} onclick="location.href='{% url 'dispatch:regularly' %}?id={{order.id}}&group={{order.group.id}}&height={{forloop.counter}}&date={{date}}'"{% endif %}>
                 {% if detail.id == order.id %}
                   <input autocomplete="off" value="{{bus.vehicle_num}}" type="text">
