--- a/static/css/dispatch/order.css
+++ b/static/css/dispatch/order.css
@@ -145,6 +145,11 @@
   margin-left: 0.6rem;
 }
 
+.search_inputArea select{
+  width: 10rem;
+  margin: 0 1rem 0 0.4rem;
+}
+
 
 
 
@@ -581,14 +586,16 @@
 }
 
 .orderListMain1 {
-  width: 20%;
+  justify-content: flex-start;
+  padding: 0 1rem;
+  width: 24%;
 }
 
 .orderListMain2 {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  width: 80%;
+  width: 76%;
   padding: 0.6rem 0 0.6rem 1rem;
   box-sizing: border-box;
 }
@@ -624,6 +631,11 @@
 .orderListSubContents:nth-child(3),
 .orderListSubContents:nth-child(5) {
   width: 8rem;
+}
+
+.orderListSubContents:nth-child(5) {
+  text-align: center;
+  word-break: keep-all;
 }
 
 .orderListSubContents:nth-child(2),
@@ -666,6 +678,7 @@
 }
 
 
+.orderListItem .orderListSubContents:nth-child(10),
 .orderListItem .orderListSubContents:nth-child(10),
 .orderListItem .orderListSubContents:nth-child(11),
 .orderListItem .orderListSubContents:nth-child(13){
