--- a/static/css/dispatch/regularlyRoute.css
+++ b/static/css/dispatch/regularlyRoute.css
@@ -84,7 +84,8 @@
   height: 3.6rem;
   order: 2;
 }
-.fixedGroup{
+
+.fixedGroup {
   order: 1;
 }
 
@@ -114,7 +115,7 @@
   cursor: pointer;
 }
 
-.groupFixe{
+.groupFixe {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -126,7 +127,7 @@
 }
 
 .groupListItem:hover .groupNum,
-.groupListItem:hover .groupName{
+.groupListItem:hover .groupName {
   background-color: #CDCDCE;
 }
 
@@ -175,14 +176,14 @@
   box-sizing: border-box;
 }
 
-.groupCreateinput{
+.groupCreateinput {
   display: flex;
   justify-content: space-between;
   width: 100%;
   height: 2.8rem;
 }
 
-.groupCreateinputinput{
+.groupCreateinputinput {
   height: 100%;
   padding-left: 0.6rem;
   border: 0.1rem solid #CDCDCE;
@@ -202,7 +203,7 @@
   width: 100%;
 }
 
-.groupCreateBtnBox a{
+.groupCreateBtnBox a {
   margin-right: auto;
 }
 
@@ -256,7 +257,7 @@
 
 
 /* 노선등록 */
-.routeinput{
+.routeinput {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -297,11 +298,6 @@
   background-color: #0069D9;
 }
 
-.routeInputDelete {
-  background-color: #444;
-  margin-left: 1rem;
-}
-
 .dispatcTable {
   width: 100%;
   height: 12.3rem;
@@ -313,9 +309,10 @@
   height: 3.1rem;
   box-sizing: border-box;
 }
+
 .dispatcTable tr:nth-child(1) td:nth-child(2),
 .dispatcTable tr:nth-child(1) td:nth-child(4),
-.dispatcTable tr:nth-child(1) td:nth-child(6){
+.dispatcTable tr:nth-child(1) td:nth-child(6) {
   border-top: 0.1rem solid #CDCDCE;
 }
 
@@ -343,29 +340,31 @@
   font-size: 1.4rem;
 }
 
-#workStart{
+#workStart {
   margin-left: 2rem;
 }
-#workEnd{
+
+#workEnd {
   margin-left: 1.6rem;
 }
 
-.routeWeek{
+.routeWeek {
   align-items: center;
   width: 100%;
   height: 100%;
 }
 
-.routeWeek input:nth-child(1){
+.routeWeek input:nth-child(1) {
   margin-left: 2rem;
 }
-.routeWeek label:nth-child(2){
+
+.routeWeek label:nth-child(2) {
   margin-right: 1.6rem;
 }
 
 .routeWeek,
 .routeNumber,
-.routeTime{
+.routeTime {
   display: flex;
 }
 
@@ -414,22 +413,22 @@
   background-color: #444;
 }
 
-.excelUpload{
+.excelUpload {
   position: absolute;
   right: 1rem;
   width: 9.4rem;
   background-color: #444;
 }
 
-.excelPopupCloseBtn{
+.excelPopupCloseBtn {
   background-color: #444;
 }
 
-.popupFooter a{
+.popupFooter a {
   margin-right: auto;
 }
 
-.downloadFormat{
+.downloadFormat {
   background-color: #444;
 }
 
@@ -438,12 +437,26 @@
 
 
 /* 노선목록 */
+.RouteListForm {
+  position: relative;
+  width: 100%;
+  height: calc(100% - 25.6rem);
+}
+
+.routeInputDelete {
+  position: absolute;
+  top: -4.5rem;
+  right: 11.3rem;
+  background-color: #444;
+  margin-left: 1rem;
+}
+
 .RouteList {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  height: calc(100% - 25.6rem);
+  height: 100%;
   box-sizing: border-box;
   background-color: white;
   border-radius: 0.2rem;
@@ -459,7 +472,8 @@
   width: 2%;
 }
 
-.RouteList table td:nth-child(2) {
+.RouteList table td:nth-child(2),
+.RouteList table td:nth-child(6) {
   width: 4%;
 }
 
@@ -471,39 +485,25 @@
   width: 16%;
 }
 
-.RouteList table td:nth-child(5) {
-  width: 6%;
-}
-
-.RouteList table td:nth-child(6) {
-  width: 4%;
-}
-
-.RouteList table td:nth-child(7) {
-  width: 6%;
-}
-
-.RouteList table td:nth-child(8) {
-  width: 6%;
-}
-
-.RouteList table td:nth-child(9) {
-  width: 4%;
-}
-
+.RouteList table td:nth-child(5),
+.RouteList table td:nth-child(7),
+.RouteList table td:nth-child(8),
+.RouteList table td:nth-child(9),
 .RouteList table td:nth-child(10) {
-  width: 16%;
+  width: 6%;
 }
 
-.RouteList table td:nth-child(11) {
-  width: 16%;
+.RouteList table td:nth-child(11),
+.RouteList table td:nth-child(12) {
+  width: 18%;
 }
 
-.RouteListHeadScroll{
+.RouteListHeadScroll {
   width: calc(100% - 0.6rem);
   height: 3.6rem;
   overflow-x: scroll;
 }
+
 .RouteListHeadScroll::-webkit-scrollbar {
   display: none;
 }
@@ -542,7 +542,7 @@
 }
 
 .RouteListBody {
-  width: 170%;
+  width: 213rem;
   height: 100%;
 }
 
@@ -551,11 +551,12 @@
   height: 3.6rem;
 }
 
-.RouteListBodyTr:hover{
+.RouteListBodyTr:hover {
   background-color: #CDCDCE;
   cursor: pointer;
 }
-.RouteListBodyTr:hover td{
+
+.RouteListBodyTr:hover td {
   border-right: 0.1rem solid white;
   border-bottom: 0.1rem solid white;
 }
@@ -566,27 +567,58 @@
   border-bottom: 0.1rem solid #CDCDCE;
 }
 
-.RouteListBody td:nth-child(3),
-.RouteListBody td:nth-child(7),
-.RouteListBody td:nth-child(10),
-.RouteListBody td:nth-child(11){
+.RouteListBody td:nth-child(4),
+.RouteListBody td:nth-child(8),
+.RouteListBody td:nth-child(11),
+.RouteListBody td:nth-child(12) {
   text-align: left;
   padding-left: 1rem;
 }
 
-.blanckTr{
+.blanckTr {
   width: 100%;
   height: 100%;
 }
 
 
 /* 팝업 */
-.popupContainer{
+.popupContainer {
   width: 50rem;
 }
-.popupArticleFileDouble{
+
+.popupArticleFileDouble {
   width: 100%;
 }
-.popupArticleFileDouble label{
+
+.popupArticleFileDouble label {
   width: 10rem;
+}
+
+.popupFooterMinibox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 32rem;
+  margin-right: auto;
+}
+
+.visibleLoadingBox {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 1rem;
+  width: calc(100% - 8rem);
+  box-sizing: border-box;
+}
+
+.visibleLoading {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  display: none;
+  font-size: 1.6rem;
+}
+
+.visibleLoading span{
+  margin-right: 0.6rem;
 }
