일정 - 일정등 완료

--- a/crudmember/templates/crudmember/home.html
+++ b/crudmember/templates/crudmember/home.html
@@ -329,58 +329,27 @@
         d="M20.563,10.563a10,10,0,1,1-10-10A10,10,0,0,1,20.563,10.563ZM9.406,15.857l7.419-7.419a.645.645,0,0,0,0-.912l-.912-.912a.645.645,0,0,0-.912,0L8.95,12.664,6.125,9.839a.645.645,0,0,0-.912,0l-.912.912a.645.645,0,0,0,0,.912l4.194,4.194a.645.645,0,0,0,.912,0Z"
         transform="translate(-0.563 -0.563)" fill="#b5b5b5" />
     </svg>
-    <div class="dataCell">
-      <div class="dataTitleBox">
-        <svg xmlns="http://www.w3.org/2000/svg" width="27.171" height="28.109" viewBox="0 0 27.171 28.109">
-          <path id="Icon_awesome-bell" data-name="Icon awesome-bell"
-            d="M8.976,20.517a2.564,2.564,0,0,0,2.563-2.565H6.413A2.564,2.564,0,0,0,8.976,20.517Zm8.631-6c-.774-.832-2.223-2.083-2.223-6.183a6.328,6.328,0,0,0-5.127-6.218V1.282a1.281,1.281,0,1,0-2.563,0v.835A6.328,6.328,0,0,0,2.568,8.335c0,4.1-1.449,5.351-2.223,6.183a1.252,1.252,0,0,0-.345.87A1.283,1.283,0,0,0,1.286,16.67H16.666a1.283,1.283,0,0,0,1.286-1.282A1.251,1.251,0,0,0,17.607,14.518Z"
-            transform="translate(10.941 0.683) rotate(30)" fill="#fff" stroke="#000" stroke-width="1" />
-        </svg>
-        <span>일정</span>
+    <div class="dataCellBox">
+      <div class="dispatchDataBox">
+        <div class="dataCell">
+          <div class="dataTitleBox">
+            <span>출/퇴근</span>
+          </div>
+          <span class="regularlyData"></span>
+        </div>
+        <div class="dataCell">
+          <div class="dataTitleBox">
+            <span>일반</span>
+          </div>
+          <span class="orderData"></span>
+        </div>
       </div>
-      <span></span>
-    </div>
-    <div class="dataCell">
-      <div class="dataTitleBox">
-        <svg id="그룹_1789" data-name="그룹 1789" xmlns="http://www.w3.org/2000/svg" width="26.629" height="21.419"
-          viewBox="0 0 26.629 21.419">
-          <g id="그룹_1383" data-name="그룹 1383">
-            <g id="사각형_11242" data-name="사각형 11242" transform="translate(0 2.895)" fill="#fff" stroke="#000"
-              stroke-width="1">
-              <rect width="26.629" height="18.525" rx="2" stroke="none" />
-              <rect x="0.5" y="0.5" width="25.629" height="17.525" rx="1.5" fill="none" />
-            </g>
-            <g id="패스_313" data-name="패스 313" transform="translate(7.526)" fill="#fff">
-              <path
-                d="M 10.42022895812988 3.531958341598511 L 1.157809138298035 3.531958341598511 C 0.4999991059303284 3.531958341598511 0.4999991059303284 3.305578231811523 0.4999991059303284 3.183958292007446 L 0.4999991059303284 1.157798290252686 C 0.4999991059303284 0.7950883507728577 0.7950891256332397 0.4999983310699463 1.157809138298035 0.4999983310699463 L 10.42022895812988 0.4999983310699463 C 10.78294944763184 0.4999983310699463 11.07803916931152 0.7950883507728577 11.07803916931152 1.157798290252686 L 11.07803916931152 3.183958292007446 C 11.07803916931152 3.305578231811523 11.07803916931152 3.531958341598511 10.42022895812988 3.531958341598511 Z"
-                stroke="none" />
-              <path
-                d="M 1.157798767089844 0.9999983310699463 C 1.070789337158203 0.9999983310699463 0.9999990463256836 1.070788383483887 0.9999990463256836 1.157798290252686 L 0.9999990463256836 3.024377822875977 C 1.041525840759277 3.028810024261475 1.093605995178223 3.031958341598511 1.157798767089844 3.031958341598511 L 10.42022895812988 3.031958341598511 C 10.48442459106445 3.031958341598511 10.5365104675293 3.028808832168579 10.57803916931152 3.024375677108765 L 10.57803916931152 1.157798290252686 C 10.57803916931152 1.070788383483887 10.507248878479 0.9999983310699463 10.42022895812988 0.9999983310699463 L 1.157798767089844 0.9999983310699463 M 1.157798767089844 -1.430511474609375e-06 L 10.42022895812988 -1.430511474609375e-06 C 11.05966949462891 -1.430511474609375e-06 11.57803916931152 0.5183682441711426 11.57803916931152 1.157798290252686 L 11.57803916931152 3.183958292007446 C 11.57803916931152 3.823388338088989 11.05966949462891 4.031958103179932 10.42022895812988 4.031958103179932 L 1.157798767089844 4.031958103179932 C 0.5183687210083008 4.031958103179932 -9.5367431640625e-07 3.823388338088989 -9.5367431640625e-07 3.183958292007446 L -9.5367431640625e-07 1.157798290252686 C -9.5367431640625e-07 0.5183682441711426 0.5183687210083008 -1.430511474609375e-06 1.157798767089844 -1.430511474609375e-06 Z"
-                stroke="none" fill="#000" />
-            </g>
-          </g>
-          <path id="패스_314" data-name="패스 314" d="M0,0,13.006,5.552,25.472,0" transform="translate(0.579 7.526)"
-            fill="none" stroke="#000" stroke-width="1" />
-          <g id="사각형_11245" data-name="사각형 11245" transform="translate(9.841 9.841)" fill="#fff" stroke="#000"
-            stroke-width="1">
-            <rect width="6.947" height="4.631" rx="1" stroke="none" />
-            <rect x="0.5" y="0.5" width="5.947" height="3.631" rx="0.5" fill="none" />
-          </g>
-        </svg>
-        <span>출/퇴근 배차</span>
+      <div class="dataCell dataCellCalender">
+        <div class="calnderItem">첫번째일정글자수가넘으면</div>
+        <div class="calnderItem">첫번째 일정 내용이 길때</div>
+        <div class="calnderItem">new notice</div>
+        <div class="moreCalender">+1</div>
       </div>
-      <span></span>
-    </div>
-    <div class="dataCell">
-      <div class="dataTitleBox">
-        <svg xmlns="http://www.w3.org/2000/svg" width="28.201" height="25.418" viewBox="0 0 28.201 25.418">
-          <path id="Icon_awesome-map-marked-alt" data-name="Icon awesome-map-marked-alt"
-            d="M13.6,0A5.95,5.95,0,0,0,7.65,5.95c0,2.657,3.889,7.5,5.379,9.257a.745.745,0,0,0,1.143,0c1.49-1.758,5.379-6.6,5.379-9.257A5.95,5.95,0,0,0,13.6,0Zm0,7.934A1.983,1.983,0,1,1,15.584,5.95,1.983,1.983,0,0,1,13.6,7.934ZM.95,10.2A1.511,1.511,0,0,0,0,11.6V23.423a.756.756,0,0,0,1.036.7l6.52-2.968V10.15a14.3,14.3,0,0,1-1-2.192ZM13.6,16.985a2.256,2.256,0,0,1-1.724-.8c-.928-1.1-1.916-2.343-2.809-3.623v8.595l9.067,3.022V12.562c-.893,1.279-1.88,2.527-2.809,3.623A2.258,2.258,0,0,1,13.6,16.985ZM26.165,7.611l-6.52,2.968v13.6l6.606-2.642a1.511,1.511,0,0,0,.95-1.4V8.313A.756.756,0,0,0,26.165,7.611Z"
-            transform="translate(0.5 0.5)" fill="#fff" stroke="#000" stroke-width="1" />
-        </svg>
-        <span>일반 배차</span>
-      </div>
-      <span></span>
     </div>
   </div>
   <div class="orderContentesArea">
@@ -417,10 +386,10 @@
 {% block popup %}
 <div class="popupAreaModules">
   <div class="popupBgModules"></div>
-  <form method="post" action="" class="popupContainer checkForm">
+  <form method="post" action="{% url dispatch:calendar_create %}" class="popupContainer checkForm">
       {% csrf_token %}
       <div class="popupHeader">
-          <div class="popupTitle">배차확인</div>
+        <div class="popupTitle">배차확인</div>
       </div>
       <div class="popupBody">
           <div class="popupSection">
@@ -447,7 +416,7 @@
 
 <div class="popupAreaModules">
   <div class="popupBgModules"></div>
-  <form method="post" action="" class="popupContainer scheduleForm">
+  <form method="post" action="{% url 'dispatch:schedule_create' %}" class="popupContainer scheduleForm">
       {% csrf_token %}
       <div class="popupHeader">
           <div class="popupTitle">일정등록</div>
@@ -456,18 +425,17 @@
           <div class="popupSection">
             <div class="popupArticle">
                 <label for="" class="popupArticleLabel">날짜</label>
-                <input autocomplete="off" type="date" class="popupArticleinput scheduleDate">
+                <input autocomplete="off" name='date' type="date" class="popupArticleinput scheduleDate">
             </div>
             <div class="popupArticle">
                 <label for="" class="popupArticleLabel">내용</label>
-                <input autocomplete="off" type="text" class="popupArticleinput scheduleContents">
+                <input autocomplete="off" name="content" type="text" class="popupArticleinput scheduleContents">
             </div>
           </div>
           <div class="popupFooter">
-              <div class="btnModules addScheduleBtn">등록</div>
+              <input type="submit" value="등록" class="btnModules addScheduleBtn">
               <div class="btnModules scheduleCloseBtn">닫기</div>
           </div>
-          <input type="hidden" name="date" class="scheduleDateData">
       </div>
   </form>
 </div>
@@ -572,44 +540,24 @@
 
 {% block script %}
 <script>
-  // const totalBusCnt = {{ total_bus_cnt }}
-  // const curBusCnt = {{ cur_bus_cnt }}
-  // const r_totalBusCnt = {{ r_total_bus_cnt }}
-  // const r_curBusCnt = {{ r_cur_bus_cnt }}
+  const totalBusCnt = {{ total_bus_cnt }}
+  const curBusCnt = {{ cur_bus_cnt }}
+  const r_totalBusCnt = {{ r_total_bus_cnt }}
+  const r_curBusCnt = {{ r_cur_bus_cnt }}
 
-  // console.log("일반배차 총 :", totalBusCnt)
-  // console.log("일반배차 :", curBusCnt)
-  // console.log("정기배차 총 :", r_totalBusCnt)
-  // console.log("정기배차 :", r_curBusCnt)
+  console.log("일반배차 총 :", totalBusCnt)
+  console.log("일반배차 :", curBusCnt)
+  console.log("정기배차 총 :", r_totalBusCnt)
+  console.log("정기배차 :", r_curBusCnt)
 
-  // {% autoescape off %}
-  // console.log("AAAAAA", {{insurance_list}})
-  // console.log("AAAAAA", {{check_list}})
-  // console.log("AAAAAA", {{duration}})
-  // console.log("AAAAAA", {{expire}})
 
-  // const alarm = [
-  //   {% for vehicle in insurance_list %}
-  // {
-  //   type: '보험',
-  //     num : '{{vehicle.vehicle_num}}',
-  //       duration: '{{vehicle.insurance_expiry_date}}'
-  // },
-  // {% endfor %}
-  // {% for vehicle in check_list %}
-  // , {
-  //   type: '차량정비',
-  //     num : '{{vehicle.vehicle_num}}',
-  //       duration: '{{duration|index:forloop.counter0}} ~ {{expire|index:forloop.counter0}}'
-  // }
-  // {% endfor %}
-  // ]
-  // const name1 = {{ check_id1 }}
-  // const name2 = {{ check_id2 }}
-  // console.log("alarm", alarm)
-  // console.log("name1", name1)
-  // console.log("name2", name2)
-  // {% endautoescape %}
+  {% autoescape off %}
+  const name1 = {{ check_id }}
+  const scheduleList = {{ schedule_list }}
+  {% endautoescape %}
+  console.log("name1", name1)
+  console.log("scheduleList", scheduleList)
+
 
   let targetLink = ""
 
@@ -648,8 +596,10 @@
 
 </script>
 <script src="{% static 'js/crudmember/calender.js' %}"></script>
+<script src="{% static 'js/crudmember/calenderData.js' %}"></script>
 <script src="{% static 'js/crudmember/checker.js' %}"></script>
 <script src="{% static 'js/crudmember/addSchedule.js' %}"></script>
 <script src="{% static 'js/crudmember/inspection.js' %}"></script>
 <script src="{% static 'js/crudmember/scheduleList.js' %}"></script>
+<script src="{% static 'js/crudmember/calnderLength.js' %}"></script>
 {% endblock %}
