--- a/static/css/crudmember/calender.css
+++ b/static/css/crudmember/calender.css
@@ -202,7 +202,8 @@
     border: 0.2rem solid #0069D9
 }
 
-.beforeMonth {
+.beforeMonth,
+.afterMonth {
     background-color: #EFEFEF;
 }
 
@@ -235,8 +236,8 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: calc(100% - 4.7rem);
-    margin-top: 2.5rem;
+    height: calc(100% - 4.2rem);
+    margin-top: 2rem;
 }
 
 .orderContentesArea {
@@ -301,19 +302,69 @@
     border-radius: 0.2rem;
 }
 
-.dataCell {
+.dataCellBox{
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 3.6rem;
-    padding: 0 1rem 0 0.6rem;
+    height: 100%;
+}
+
+.dispatchDataBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 6rem;
+    height: 100%;
+}
+
+.dataCell {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: calc(50% - 0.5rem);
+    padding: 0.5rem;
     font-size: 1.4rem;
     border-radius: 0.2rem;
-    /* border: 0.1rem solid #0069D9; */
-    box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.3);
+    border: 0.1rem solid #D2D2D2;
+    /* box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.3); */
     box-sizing: border-box;
     cursor: pointer;
+}
+
+.dataCellCalender{
+    justify-content: flex-start;
+    width: calc(100% - 7rem);
+    height: 100%;
+}
+
+.calnderItem{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    overflow: hidden;
+    width: 100%;
+    height: 24%;
+    padding-left: 0.6rem;
+    padding-right: 0.4rem;
+    margin-top: 3%;
+    box-sizing: border-box;
+    border: 0.1rem solid #D2D2D2;
+    border-radius: 0.2rem;
+}
+
+.moreCalender{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 13%;
+    margin: 3% 0;
+    font-size: 1.2rem;
+    box-sizing: border-box;
 }
 
 .dataCell:hover {
@@ -324,6 +375,17 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+}
+
+.regularlyData,
+.orderData{
+    font-size: 1.2rem;
+}
+
+.needDispatch{
+    padding: 0.1rem 0.5rem;
+    border-radius: 0.3rem;
+    background-color: #CDCDCE;
 }
 
 .needCheck {
